jack_compiler/antlr_generated/grammar/JackParser.py
# Generated from grammar/Jack.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JackParser ( Parser ):

    grammarFileName = "Jack.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'constructor'", "'function'", 
                     "'method'", "'field'", "'static'", "'var'", "'int'", 
                     "'boolean'", "'char'", "'void'", "'true'", "'false'", 
                     "'null'", "'this'", "'let'", "'do'", "'if'", "'else'", 
                     "'while'", "'return'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'~'", "'<'", "'>'", "'='", "'.'", "','", 
                     "';'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "CONSTRUCTOR", "FUNCTION", "METHOD", 
                      "FIELD", "STATIC", "VAR", "INT", "BOOLEAN", "CHAR", 
                      "VOID", "TRUE", "FALSE", "NULL", "THIS", "LET", "DO", 
                      "IF", "ELSE", "WHILE", "RETURN", "PLUS", "MINUS", 
                      "MUL", "DIV", "AND", "OR", "NOT", "LT", "GT", "EQUAL", 
                      "DOT", "COMMA", "SEMICOLON", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "LBRACE", "RBRACE", "INTEGER", "STRING_LITERAL", 
                      "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_classVarDeclaration = 2
    RULE_type = 3
    RULE_subroutineDeclaration = 4
    RULE_parameterList = 5
    RULE_subroutineBody = 6
    RULE_varDeclaration = 7
    RULE_statements = 8
    RULE_statement = 9
    RULE_letStatement = 10
    RULE_ifStatement = 11
    RULE_whileStatement = 12
    RULE_doStatement = 13
    RULE_returnStatement = 14
    RULE_expression = 15
    RULE_term = 16
    RULE_subroutineCall = 17
    RULE_expressionList = 18
    RULE_op = 19
    RULE_unaryOp = 20
    RULE_keywordConstant = 21
    RULE_className = 22
    RULE_subroutineName = 23
    RULE_varName = 24
    RULE_integerConstant = 25
    RULE_stringConstant = 26

    ruleNames =  [ "program", "classDeclaration", "classVarDeclaration", 
                   "type", "subroutineDeclaration", "parameterList", "subroutineBody", 
                   "varDeclaration", "statements", "statement", "letStatement", 
                   "ifStatement", "whileStatement", "doStatement", "returnStatement", 
                   "expression", "term", "subroutineCall", "expressionList", 
                   "op", "unaryOp", "keywordConstant", "className", "subroutineName", 
                   "varName", "integerConstant", "stringConstant" ]

    EOF = Token.EOF
    CLASS=1
    CONSTRUCTOR=2
    FUNCTION=3
    METHOD=4
    FIELD=5
    STATIC=6
    VAR=7
    INT=8
    BOOLEAN=9
    CHAR=10
    VOID=11
    TRUE=12
    FALSE=13
    NULL=14
    THIS=15
    LET=16
    DO=17
    IF=18
    ELSE=19
    WHILE=20
    RETURN=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    AND=26
    OR=27
    NOT=28
    LT=29
    GT=30
    EQUAL=31
    DOT=32
    COMMA=33
    SEMICOLON=34
    LPAREN=35
    RPAREN=36
    LBRACKET=37
    RBRACKET=38
    LBRACE=39
    RBRACE=40
    INTEGER=41
    STRING_LITERAL=42
    IDENTIFIER=43
    WS=44
    LINE_COMMENT=45
    BLOCK_COMMENT=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(JackParser.ClassDeclarationContext,0)


        def EOF(self):
            return self.getToken(JackParser.EOF, 0)

        def getRuleIndex(self):
            return JackParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JackParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.classDeclaration()
            self.state = 55
            self.match(JackParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(JackParser.CLASS, 0)

        def className(self):
            return self.getTypedRuleContext(JackParser.ClassNameContext,0)


        def LBRACE(self):
            return self.getToken(JackParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(JackParser.RBRACE, 0)

        def classVarDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.ClassVarDeclarationContext)
            else:
                return self.getTypedRuleContext(JackParser.ClassVarDeclarationContext,i)


        def subroutineDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.SubroutineDeclarationContext)
            else:
                return self.getTypedRuleContext(JackParser.SubroutineDeclarationContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = JackParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(JackParser.CLASS)
            self.state = 58
            self.className()
            self.state = 59
            self.match(JackParser.LBRACE)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 60
                self.classVarDeclaration()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0):
                self.state = 66
                self.subroutineDeclaration()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(JackParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(JackParser.TypeContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def SEMICOLON(self):
            return self.getToken(JackParser.SEMICOLON, 0)

        def STATIC(self):
            return self.getToken(JackParser.STATIC, 0)

        def FIELD(self):
            return self.getToken(JackParser.FIELD, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.COMMA)
            else:
                return self.getToken(JackParser.COMMA, i)

        def getRuleIndex(self):
            return JackParser.RULE_classVarDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassVarDeclaration" ):
                listener.enterClassVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassVarDeclaration" ):
                listener.exitClassVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassVarDeclaration" ):
                return visitor.visitClassVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classVarDeclaration(self):

        localctx = JackParser.ClassVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classVarDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not(_la==5 or _la==6):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 75
            self.type_()
            self.state = 76
            self.varName()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 77
                self.match(JackParser.COMMA)
                self.state = 78
                self.varName()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(JackParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(JackParser.INT, 0)

        def BOOLEAN(self):
            return self.getToken(JackParser.BOOLEAN, 0)

        def CHAR(self):
            return self.getToken(JackParser.CHAR, 0)

        def className(self):
            return self.getTypedRuleContext(JackParser.ClassNameContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = JackParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(JackParser.INT)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(JackParser.BOOLEAN)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.match(JackParser.CHAR)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.className()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineName(self):
            return self.getTypedRuleContext(JackParser.SubroutineNameContext,0)


        def LPAREN(self):
            return self.getToken(JackParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JackParser.RPAREN, 0)

        def subroutineBody(self):
            return self.getTypedRuleContext(JackParser.SubroutineBodyContext,0)


        def CONSTRUCTOR(self):
            return self.getToken(JackParser.CONSTRUCTOR, 0)

        def FUNCTION(self):
            return self.getToken(JackParser.FUNCTION, 0)

        def METHOD(self):
            return self.getToken(JackParser.METHOD, 0)

        def VOID(self):
            return self.getToken(JackParser.VOID, 0)

        def type_(self):
            return self.getTypedRuleContext(JackParser.TypeContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(JackParser.ParameterListContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_subroutineDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineDeclaration" ):
                listener.enterSubroutineDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineDeclaration" ):
                listener.exitSubroutineDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineDeclaration" ):
                return visitor.visitSubroutineDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def subroutineDeclaration(self):

        localctx = JackParser.SubroutineDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subroutineDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 28) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 93
                self.match(JackParser.VOID)
                pass
            elif token in [8, 9, 10, 43]:
                self.state = 94
                self.type_()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 97
            self.subroutineName()
            self.state = 98
            self.match(JackParser.LPAREN)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093024000) != 0):
                self.state = 99
                self.parameterList()


            self.state = 102
            self.match(JackParser.RPAREN)
            self.state = 103
            self.subroutineBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.TypeContext)
            else:
                return self.getTypedRuleContext(JackParser.TypeContext,i)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.COMMA)
            else:
                return self.getToken(JackParser.COMMA, i)

        def getRuleIndex(self):
            return JackParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = JackParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.type_()
            self.state = 106
            self.varName()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 107
                self.match(JackParser.COMMA)
                self.state = 108
                self.type_()
                self.state = 109
                self.varName()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(JackParser.LBRACE, 0)

        def statements(self):
            return self.getTypedRuleContext(JackParser.StatementsContext,0)


        def RBRACE(self):
            return self.getToken(JackParser.RBRACE, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(JackParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_subroutineBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineBody" ):
                listener.enterSubroutineBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineBody" ):
                listener.exitSubroutineBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineBody" ):
                return visitor.visitSubroutineBody(self)
            else:
                return visitor.visitChildren(self)




    def subroutineBody(self):

        localctx = JackParser.SubroutineBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subroutineBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(JackParser.LBRACE)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 117
                self.varDeclaration()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.statements()
            self.state = 124
            self.match(JackParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(JackParser.VAR, 0)

        def type_(self):
            return self.getTypedRuleContext(JackParser.TypeContext,0)


        def varName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.VarNameContext)
            else:
                return self.getTypedRuleContext(JackParser.VarNameContext,i)


        def SEMICOLON(self):
            return self.getToken(JackParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.COMMA)
            else:
                return self.getToken(JackParser.COMMA, i)

        def getRuleIndex(self):
            return JackParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = JackParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(JackParser.VAR)
            self.state = 127
            self.type_()
            self.state = 128
            self.varName()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 129
                self.match(JackParser.COMMA)
                self.state = 130
                self.varName()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(JackParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.StatementContext)
            else:
                return self.getTypedRuleContext(JackParser.StatementContext,i)


        def getRuleIndex(self):
            return JackParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = JackParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3604480) != 0):
                self.state = 138
                self.statement()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def letStatement(self):
            return self.getTypedRuleContext(JackParser.LetStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(JackParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(JackParser.WhileStatementContext,0)


        def doStatement(self):
            return self.getTypedRuleContext(JackParser.DoStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(JackParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return JackParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = JackParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.letStatement()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.ifStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.whileStatement()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.doStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 5)
                self.state = 148
                self.returnStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(JackParser.LET, 0)

        def varName(self):
            return self.getTypedRuleContext(JackParser.VarNameContext,0)


        def EQUAL(self):
            return self.getToken(JackParser.EQUAL, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JackParser.ExpressionContext,i)


        def SEMICOLON(self):
            return self.getToken(JackParser.SEMICOLON, 0)

        def LBRACKET(self):
            return self.getToken(JackParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(JackParser.RBRACKET, 0)

        def getRuleIndex(self):
            return JackParser.RULE_letStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatement" ):
                listener.enterLetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatement" ):
                listener.exitLetStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStatement" ):
                return visitor.visitLetStatement(self)
            else:
                return visitor.visitChildren(self)




    def letStatement(self):

        localctx = JackParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_letStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(JackParser.LET)
            self.state = 152
            self.varName()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 153
                self.match(JackParser.LBRACKET)
                self.state = 154
                self.expression()
                self.state = 155
                self.match(JackParser.RBRACKET)


            self.state = 159
            self.match(JackParser.EQUAL)
            self.state = 160
            self.expression()
            self.state = 161
            self.match(JackParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(JackParser.IF, 0)

        def LPAREN(self):
            return self.getToken(JackParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(JackParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(JackParser.RPAREN, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.LBRACE)
            else:
                return self.getToken(JackParser.LBRACE, i)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JackParser.StatementsContext)
            else:
                return self.getTypedRuleContext(JackParser.StatementsContext,i)


        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(JackParser.RBRACE)
            else:
                return self.getToken(JackParser.RBRACE, i)

        def ELSE(self):
            return self.getToken(JackParser.ELSE, 0)

        def getRuleIndex(self):
            return JackParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)



